# Autonomous_systems_prj

./: .gitignore  README.md
catkin_ws/src/controller_pkg/src/: controller_node.cpp  traj_publisher.cpp
catkin_ws/src/d_star_nav_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/d_star_nav_pkg/include/: dstar_explorer.h  dstar_lite.h  frontier_detector.h
catkin_ws/src/d_star_nav_pkg/src/: dstar_explorer.cpp  dstar_lite.cpp  frontier_detector.cpp
catkin_ws/src/depth_to_pointcloud/: CMakeLists.txt  package.xml
catkin_ws/src/depth_to_pointcloud/launch/: depth_to_pcl.launch
catkin_ws/src/desired_state_pub/: CMakeLists.txt  package.xml
catkin_ws/src/desired_state_pub/launch/: start_with_simulation.launch
catkin_ws/src/desired_state_pub/src/: desired_state_pub_node.cpp
catkin_ws/src/drone_frontier_exploration/: CMakeLists.txt  package.xml
catkin_ws/src/drone_frontier_exploration/launch/: drone_frontier_exploration.launch
catkin_ws/src/drone_frontier_exploration/src/: drone_frontier_exploration.cpp
catkin_ws/src/drone_state_machine/: CMakeLists.txt  package.xml
catkin_ws/src/drone_state_machine/launch/: drone_state_machine.launch
catkin_ws/src/drone_state_machine/src/: drone_state_machine_node.cpp
catkin_ws/src/dstar_explorer/: CMakeLists.txt  package.xml
catkin_ws/src/dstar_explorer/scripts/: dstar_explorer.py
catkin_ws/src/dstar_explorer/src/: __init__.py  dstar_lite.py  frontier_detector.py
catkin_ws/src/dstar_lite_planner/: CMakeLists.txt  package.xml
catkin_ws/src/dstar_lite_planner/src/: dstar_lite_planner.cpp
catkin_ws/src/frontier_detector/: CMakeLists.txt  package.xml
catkin_ws/src/frontier_detector/scripts/: dstar_lite.py  frontier_detector.py
catkin_ws/src/main_launch/: package.xml
catkin_ws/src/main_launch/launch/: main.launch
catkin_ws/src/main_launch/rviz/: uav.rviz
catkin_ws/src/mode_launcher/: CMakeLists.txt  package.xml
catkin_ws/src/mode_launcher/launch/: mode_launcher.launch
catkin_ws/src/mode_launcher/src/: mode_launcher.cpp
catkin_ws/src/pointcloud_generator/: CMakeLists.txt  package.xml
catkin_ws/src/pointcloud_to_octomap/: CMakeLists.txt  package.xml
catkin_ws/src/pointcloud_to_octomap/launch/: pointcloud_to_octomap.launch
catkin_ws/src/semantic_image_processor/: CMakeLists.txt  package.xml
catkin_ws/src/semantic_image_processor/scripts/: object_positions.txt  semantic_image_processor.py
catkin_ws/src/trajectory_planning/basic_waypoint_pkg/: CMakeLists.txt
catkin_ws/src/trajectory_planning/basic_waypoint_pkg/config/: trajectory_config.yaml
catkin_ws/src/trajectory_planning/basic_waypoint_pkg/include/: planner.h
catkin_ws/src/trajectory_planning/basic_waypoint_pkg/launch/: waypoint_mission.launch
catkin_ws/src/trajectory_planning/basic_waypoint_pkg/scripts/: switch_to_dstar.py
catkin_ws/src/trajectory_planning/basic_waypoint_pkg/src/: desired_state_mux.cc  planner.cc  planner_node.cc  trajectory_converter.cpp
