<?xml version="1.0"?>
<package format="2">
  <name>d_star_nav_pkg</name>
  <version>0.0.0</version>
  <description>A package for D* based exploration and frontier detection in cave environments.</description>

  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <!-- Additional export tags can be placed here -->
  </export>
</package>

