<?xml version="1.0"?>
<package format="2">
  <name>dstar_lite_planner</name>
  <version>0.0.1</version>
  <description>
    The dstar_lite_planner package implements a D* Lite based path planner for dynamic obstacle avoidance.
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  
  <export>
  </export>
</package>

