<?xml version="1.0"?>
<package format="2">
  <name>mode_launcher</name>
  <version>0.0.1</version>
  <description>
    A package to launch the mode launcher node which listens on the mode_switch topic and launches the drone_frontier_exploration node when mode_switch becomes true.
  </description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
    <!-- Additional export tags can be placed here -->
  </export>
</package>
